[package]
name = "xcb-wm"
version = "0.3.1"
authors = [ "Armin Friedl <dev@friedl.net>" ]
description = "Rust implementation of xcb-wm - icccm and ewmh extensions for xcb"
readme = "README.md"
keywords = ["icccm", "ewmh", "xcb", "window", "x11"]
license = "MIT"
edition = "2018"
repository = "https://github.com/arminfriedl/xcb-wm"
homepage = "https://github.com/arminfriedl/xcb-wm"

[dependencies]
xcb = "1"
paste = "1"
bitflags = "1.3.2"

[features]
icccm = []
ewmh = []

# Show documentations for `icccm` and `ewmh` features on http://docs.rs
[package.metadata.docs.rs]
rustc-args = ["--cfg", "feature='icccm'", "--cfg", "feature='ewmh'"]
